--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ body{
 .navbar{
     width: 79%;
     max-width: 1600px;
-    border: 3px solid white;
+    /* border: 3px solid white; */
     margin: 0px auto;
     display: flex;
     align-items: center;
@@ -55,7 +55,7 @@ body{
   color: #FFFFFF;
   border: none;
   cursor: pointer;
-  border-radius: 999px ;
+  border-radius: 10000px ;
   background: linear-gradient(
     90deg,
     #ffeb3b,
@@ -81,11 +81,123 @@ body{
 }
 .hamburger {
   display: none;
-  font-size: 26px;
-  color: #fff;
+  
   cursor: pointer;
 }
 
+.hero{
+    min-height: 100vh;
+    background-image: url("../assets/hero-bg.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+}
+.hero-circle {
+    width: 350px;
+    height: 350px;
+    background: url("../assets/hero-circle.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+.hero-circle img {
+    width: 110px;
+}
+.badge {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #00ffb3;
+    color: #000;
+    padding: 6px 14px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 20px;
+}
+.badge:hover{
+  transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 0, 128, 0.6);
+}
+.hero-content h1 {
+    font-size: 48px;
+    margin-bottom: 12px;
+    color: #FFFFFF;
+}
+.hero-content p {
+    max-width: 520px;
+    font-size: 16px;
+    opacity: 0.85;
+    margin: 0 auto 30px;
+    line-height: 1.6;
+    color: #FFFFFF;
+}
+.hero-buttons {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.hero-buttons button {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 12px 22px;
+    border-radius: 30px;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    
+    transition: all 0.3s ease;
+}
+.hero-buttons img {
+    width: 18px;
+}
+.spotify-btn{
+  border: none;
+  background: linear-gradient(
+    45deg,
+    #ffeb3b,
+    #ff2bbf,
+    #7a00ff);
+  color: #ffffff;
+}
+.spotify-btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 0, 128, 0.6);
+}
+.youtube-btn{
+    background: transparent;
+    border: 2px solid #00ffb3;
+    color: #00ffb3;
+}
+.youtube-btn:hover {
+    background: #00ffb3;
+    color: #000;
+    transform: scale(1.05);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* for mobile or small device */
 @media (max-width: 576px){
 
   .navbar{
@@ -102,6 +214,48 @@ body{
   .hamburger{
     display: block;
   }
+
+  /* hero section */
+  .hero{
+        padding: 0;
+  }
+
+  .hero-circle {
+        width: 200px;
+        height: 200px;
+        margin-bottom: 30px;
+    }
+
+    .hero-circle img {
+        width: 80px;
+    }
+
+    .badge {
+        font-size: 10px;
+        padding: 4px 10px;
+        top: 8px;
+        right: 8px;
+    }
+
+    .hero-content h1 {
+        font-size: 32px;
+    }
+
+    .hero-content p {
+        font-size: 14px;
+        line-height: 1.5;
+        margin-bottom: 24px;
+    }
+
+    .hero-buttons {
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .hero-buttons button {
+        width: 100%;
+        justify-content: center;
+    }
 
 }
 
