--- a/style/style.css
+++ b/style/style.css
@@ -120,21 +120,21 @@ body{
     background: #00ffb3;
     color: #000;
     padding: 6px 14px;
-    font-size: 12px;
-    font-weight: bold;
-    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 1000px;
 }
 .badge:hover{
   transform: scale(1.05);
-    box-shadow: 0 0 20px rgba(255, 0, 128, 0.6);
+  box-shadow: 0 0 20px rgba(255, 0, 128, 0.6);
 }
 .hero-content h1 {
-    font-size: 48px;
+    font-size: 3.75rem;
     margin-bottom: 12px;
     color: #FFFFFF;
 }
 .hero-content p {
-    max-width: 520px;
+    max-width: 550px;
     font-size: 16px;
     opacity: 0.85;
     margin: 0 auto 30px;
@@ -184,6 +184,57 @@ body{
     background: #00ffb3;
     color: #000;
     transform: scale(1.05);
+}
+
+/* about podcast section start */
+.about{
+  background: linear-gradient(180deg, #14002e, #0b001c);
+  padding: 60px 20px;
+}
+.container{
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+}
+.about h1{
+  color: #FFFFFF;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+.description{
+  font-size: 1rem;
+  color: #FFFFFF;
+  max-width: 1200px;
+  margin: 0 auto 15px;
+  line-height: 1.7;
+}
+.divider {
+  width: 100%;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.15);
+  margin: 50px 0;
+}
+.stats{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 25px;
+}
+.stat {
+  flex: 1;
+  min-width: 200px
+}
+.stat h2 {
+  font-size: 2.2rem;
+  color: #2cff8f;
+  margin-bottom: 8px;
+}
+
+.stat span {
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  color: #cfcfcf;
 }
 
 
@@ -257,7 +308,21 @@ body{
         justify-content: center;
     }
 
+    .about h1 {
+    font-size: 42px;
+  }
+  /* about podcast section */
+
+  .stats {
+    justify-content: center;
+  }
+
+  .stat{
+    width: 45%;
+    min-width: unset;   /* main section */
+    flex: unset;        /* main section */
+  }
+
+
+
 }
-
-
-
