--- a/style/style.css
+++ b/style/style.css
@@ -237,6 +237,66 @@ body{
   color: #cfcfcf;
 }
 
+/* choose tech wave */
+.techwave{
+    max-width: 1100px;
+    margin: 80px auto;
+    padding: 40px;
+    /* border: 2px solid #2f7cff; */
+}
+.section-title{
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 40px;
+    /* border: 1px dashed #2f7cff; */
+    padding: 12px;
+    color: #FFFFFF;
+}
+.feature-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+}
+.feature-card{
+    background: #2a135f;
+    padding: 30px;
+    border-radius: 14px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    transition: 0.3s ease;
+}
+.feature-card.large{
+    grid-column: span 2;
+}
+.feature-card:hover{
+    transform: translateY(-6px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
+.icon-box{
+    width: 55px;
+    height: 55px;
+    background: #3b1b7a;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon-box img{
+    width: 28px;
+    height: 28px;
+}
+.feature-card h3{
+    font-size: 20px;
+    color: #FFFFFF;
+}
+.feature-card p{
+    font-size: 14px;
+    line-height: 1.6;
+    color: #d6d6e7;
+}
+
+
 
 
 
@@ -322,6 +382,15 @@ body{
     min-width: unset;   /* main section */
     flex: unset;        /* main section */
   }
+
+  /* choose tech wave section */
+  .feature-grid{
+        grid-template-columns: 1fr;
+    }
+
+    .feature-card.large{
+        grid-column: span 1;
+    }
 
 
 
