--- a/style/style.css
+++ b/style/style.css
@@ -398,6 +398,89 @@ body{
   color: #32ff7e;
 }
 
+/*  */
+.host-section {
+  max-width: 1200px;
+  margin: auto;
+  padding: 70px 20px;
+}
+
+.section-title {
+  text-align: center;
+  font-size: 42px;
+  font-weight: 700;
+  margin-bottom: 45px;
+}
+
+/* ========================
+   HOST CARD
+======================== */
+.host-card {
+  background: linear-gradient(135deg, #2a0a4a, #1e0836);
+  border-radius: 26px;
+  padding: 45px;
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
+}
+
+/* */
+.host-image img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  /* border: 4px solid #6d28d9; */
+}
+
+/* ========================
+   CONTENT
+======================== */
+.host-content h2 {
+  color: #FFFFFF;
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 14px;
+}
+
+.host-content p {
+  color: #cfc3df;
+  line-height: 1.7;
+  max-width: 896px;
+}
+
+/* ========================
+   SOCIAL ICONS (IMAGE BASED)
+======================== */
+.social-icons {
+  margin-top: 22px;
+  display: flex;
+  gap: 14px;
+}
+
+.social-icons a {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: #3a1369;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+
+.social-icons img {
+  width: 22px;
+  height: 22px;
+  object-fit: contain;
+}
+
+.social-icons a:hover {
+  background: #7c3aed;
+  transform: translateY(-4px);
+}
+
 
 
 
@@ -499,6 +582,30 @@ body{
   .card-row {
     flex-direction: column;
     align-items: center;
+  }
+
+  /* meet host section start */
+  .host-card {
+    flex-direction: column;
+    text-align: center;
+    padding: 35px 25px;
+  }
+
+  .host-image img {
+    width: 130px;
+    height: 130px;
+  }
+
+  .section-title {
+    font-size: 34px;
+  }
+
+  .host-content h2 {
+    font-size: 26px;
+  }
+
+  .social-icons {
+    justify-content: center;
   }
 
 
